feat: styles home done!

--- a/views/about.html
+++ b/views/about.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emilia | Acerca de</title>
+    <link rel="stylesheet" href="/css/style.css">
     <script src="https://kit.fontawesome.com/3f21023fe6.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class = "about">
     <header>
         <nav>
             <ul>
@@ -27,12 +28,16 @@
     </header>
     <main>
         <h1>Abaout<br>Emilia//</h1>
-        <section>
+        <div>
             <article>
                 <h3>"Seatle-based pop star her <br> indie debut whith a hauntingly beautiful albim"</h3>
                 <p>- John Tircle, Music today Post</p>
             </article>
-        </section>
+            <article>
+                <h3>"Emilia Cole is one of the <br> scene's breakout stars"</h3>
+                <p>- John Tirckle, Music Today Post</p>
+            </article>
+        </div>
     </main>
 </body>
 </html>
