--- a/views/home.html
+++ b/views/home.html
@@ -7,12 +7,13 @@
     <title>Emilia | Home</title>
     <!--<script src="https://kit.fontawesome.com/3f21023fe6.js" crossorigin="anonymous"></script>-->
     <script src="https://kit.fontawesome.com/7fda48dd8d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body>
-    <header>
-        <nav>
-            <ul>
+<body class = "home">
+    <header class="home__header__vertical">
+        <nav class="home__header__nav">
+            <ul class="home__header__nav_ul">
                 <li><a href="/">HOME</a></li>
                 <li><a href="/about">ABOUT</a></li>
                 <li><a href="/music">MUSIC</a></li>
@@ -28,8 +29,7 @@
             <a href=""><i class="fab fa-instagram-square"></i></a>
         </nav>
     </header>
-    <main>
-        <img src="/img/emilia-home.jpg" alt="Amor platonico de Eric">
+    <main class="home__main">
         <h2>Emilia<br>Cole //</h2>
         <h1>Twist in my reality</h1>
 
