--- a/views/contact.html
+++ b/views/contact.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emilia | Contacto</title>
     <script src="https://kit.fontawesome.com/3f21023fe6.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
+
+<body class="contact">
     <header>
         <nav>
-            <ul>
+            <ul class="menu_contact">
                 <li><a href="/">HOME</a></li>
                 <li><a href="/about">ABOUT</a></li>
                 <li><a href="/music">MUSIC</a></li>
@@ -27,37 +30,55 @@
     </header>
     <main>
         <h1>Contact //</h1>
-        
+
         <section>
             <h2>We are here</h2>
             <article>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0167132768424!2d-58.38375908477038!3d-34.60373888045957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses-419!2sar!4v1686872798637!5m2!1ses-419!2sar" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </article>
-        </section>
-        <section>
-            <h2>Contact Info</h2>
-            <article>
-                <h4>MANAGMENT | KAREN BLANCHE</h4>
-                <P><span>email:</span><a href="mailto">asdasd@asads.com</a></P>
-                <P><span>Phone:</span><a href="cel: 12323434">12323434</a></P>
-            </article>
-            <article>
-                <h4>MANAGMENT | KAREN BLANCHE</h4>
-                <P><span>email:</span><a href="mailto">asdasd@asads.com</a></P>
-                <P><span>Phone:</span><a href="cel: 12323434">12323434</a></P>
-            </article>
-            <article>
-                <h4>MANAGMENT | KAREN BLANCHE</h4>
-                <P><span>email:</span><a href="mailto">asdasd@asads.com</a></P>
-                <P><span>Phone:</span><a href="cel: 12323434">12323434</a></P>
-            </article>
-            <article>
-                <h4>MANAGMENT | KAREN BLANCHE</h4>
-                <P><span>email:</span><a href="mailto">asdasd@asads.com</a></P>
-                <P><span>Phone:</span><a href="cel: 12323434">12323434</a></P>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0167132768424!2d-58.38375908477038!3d-34.60373888045957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses-419!2sar!4v1686872798637!5m2!1ses-419!2sar"
+                    width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </article>
         </section>
         
+<!-- //////////////////////////////////////////////////////////// -->
+        <section>
+            <h3>contact info</h3>
+            <article>
+                <h4>MANAGEMENT | Karen Blanche </h4>
+                <p><b>email: </b><a href="mailto:info@mysite.com">info@mysite.com</a></p>
+                <p><b>phone: </b><a href="tel:+5491134016800">+54 9 11 3401-6800</a></p>
+            </article>
+            <article>
+                <h4>BOOKING | Daniel Ku </h4>
+                <p>
+                    <b>email: </b><a class="dataInfo" href="mailto:info@mysite.com">info@mysite.com</a>
+                </p>
+                <p>
+                    <b>phone: </b><a class="dataInfo" href="tel:+123-456-7890"> 123-456-7890</a>
+                </p>
+            </article>
+            <article>
+                <h4>LABEL | Wix Records, Jake Coldham </h4>
+                <p>
+                    <b>email: </b><a href="mailto:info@mysite.com">info@mysite.com</a>
+                </p>
+                <p>
+                    <b>phone: </b><a href="tel:+123-456-7890"> 123-456-7890</a>
+                </p>
+            </article>
+            <article>
+                <h4>PR | That Girl Pr, Sarah Brookstone </h4>
+                <p>
+                    <b>email: </b><a href="mailto:info@mysite.com">info@mysite.com</a>
+                </p>
+                <p>
+                    <b>phone: </b><a href="tel:+123-456-7890"> 123-456-7890</a>
+                </p>
+            </article>
+        </section>
+
     </main>
 </body>
+
 </html>
