--- a/views/music.html
+++ b/views/music.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emilia | Música</title>
     <script src="https://kit.fontawesome.com/3f21023fe6.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body>
+<body class=" music">
     <header>
         <nav>
             <ul>
