feat: styles about & music & contact

--- a/views/about.html
+++ b/views/about.html
@@ -8,13 +8,13 @@
     <script src="https://kit.fontawesome.com/3f21023fe6.js" crossorigin="anonymous"></script>
 </head>
 <body class = "about">
-    <header>
-        <nav>
+    <header class="about__header">
+        <nav class="about__header__nav">
             <ul>
-                <li><a href="/">HOME</a></li>
-                <li><a href="/about">ABOUT</a></li>
-                <li><a href="/music">MUSIC</a></li>
-                <li><a href="/contact">CONTACT</a></li>
+                <li><a href="/">| HOME |</a></li>
+                <li><a href="/about">ABOUT |</a></li>
+                <li><a href="/music">MUSIC |</a></li>
+                <li><a href="/contact">CONTACT |</a></li>
             </ul>
         </nav>
         <nav>
@@ -26,9 +26,9 @@
             <a href=""><i class="fab fa-instagram-square"></i></a>
         </nav>
     </header>
-    <main>
+    <main class="about__main">
         <h1>Abaout<br>Emilia//</h1>
-        <div>
+        <div class="about__main__div">
             <article>
                 <h3>"Seatle-based pop star her <br> indie debut whith a hauntingly beautiful albim"</h3>
                 <p>- John Tircle, Music today Post</p>
