--- a/views/contact.html
+++ b/views/contact.html
@@ -10,13 +10,13 @@
 </head>
 
 <body class="contact">
-    <header>
-        <nav>
+    <header class="contact__header">
+        <nav class="contact__header__nav">
             <ul class="menu_contact">
-                <li><a href="/">HOME</a></li>
-                <li><a href="/about">ABOUT</a></li>
-                <li><a href="/music">MUSIC</a></li>
-                <li><a href="/contact">CONTACT</a></li>
+                <li><a href="/">| HOME |</a></li>
+                <li><a href="/about">ABOUT |</a></li>
+                <li><a href="/music">MUSIC |</a></li>
+                <li><a href="/contact">CONTACT |</a></li>
             </ul>
         </nav>
         <nav>
@@ -28,10 +28,10 @@
             <a href=""><i class="fab fa-instagram-square"></i></a>
         </nav>
     </header>
-    <main>
+    <main class="contact__main">
         <h1>Contact //</h1>
 
-        <section>
+        <div>
             <h2>We are here</h2>
             <article>
                 <iframe
@@ -39,10 +39,10 @@
                     width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </article>
-        </section>
+        </div>
         
 <!-- //////////////////////////////////////////////////////////// -->
-        <section>
+        <div class="contacto">
             <h3>contact info</h3>
             <article>
                 <h4>MANAGEMENT | Karen Blanche </h4>
@@ -76,7 +76,7 @@
                     <b>phone: </b><a href="tel:+123-456-7890"> 123-456-7890</a>
                 </p>
             </article>
-        </section>
+        </div>
 
     </main>
 </body>
