--- a/views/music.html
+++ b/views/music.html
@@ -10,8 +10,8 @@
 </head>
 
 <body class=" music">
-    <header>
-        <nav>
+    <header class="music__header">
+        <nav class="music__header__nav">
             <ul>
                 <li><a href="/">HOME</a></li>
                 <li><a href="/about">ABOUT</a></li>
@@ -28,28 +28,28 @@
             <a href=""><i class="fab fa-instagram-square"></i></a>
         </nav>
     </header>
-    <main>
+    <main class="music__main">
         <h1>Music //</h1>
-        <nav>
+        <nav class="music__main__nav">
             <h5>Direct Links</h5>
             <li><a href="#albun">Albun</a></li>
             <li><a href="#organic">Video. Organic Love</a></li>
             <li><a href="#street">Video Street Light</a></li>
         </nav>
-        <section>
-            <article id="albun">
-                <h4>Albun<br>Twist in my reality</h4>
+        <div>
+            <article>
+                <h3>Albun<br>Twist in my reality</h3>
                 <img src="/img/emilia-play-list.png" alt="musica">
                 <ol>
-                    <li><i class="fas fa-play"></i>Organic Love | 2:43</li>
-                    <li><i class="fas fa-play"></i>Twist in my reality | 1:23</li>
-                    <li><i class="fas fa-play"></i>strict light | 1:34</li>
-                    <li><i class="fas fa-play"></i>Love don't (cover) | 3:56</li>
+                    <li><i class="fas fa-play"></i> Organic Love | 2:43</li>
+                    <li><i class="fas fa-play"></i> Twist in my reality | 1:23</li>
+                    <li><i class="fas fa-play"></i> strict light | 1:34</li>
+                    <li><i class="fas fa-play"></i> Love don't (cover) | 3:56</li>
                 </ol>
                 <a href="#">Go top</a>
             </article>
             <article>
-                <h1>Video <br>Organic Love</h1>
+                <h3>Video <br>Organic Love</h3>
                 <iframe title="vimeo-player" src="https://player.vimeo.com/video/135166028?h=fdb0646ae5" width="640"
                     height="360" frameborder="0" allowfullscreen></iframe>
                 <ul>
@@ -70,7 +70,7 @@
                 </ul>
                 <a href="#">Go Top</a>
             </article>
-        </section>
+        </divn>
     </main>
 </body>
 
